Progressive Update Address Changes 06-01-2026

--- a/Progressive/ProgressiveUpdateAddress.html
+++ b/Progressive/ProgressiveUpdateAddress.html
@@ -564,6 +564,7 @@
   <option value="United Arab Emirates">United Arab Emirates</option>
   <option value="United Kingdom">United Kingdom</option>
   <option value="United States Minor Outlying Islands">United States Minor Outlying Islands</option>
+<option value="United States Of America">United States Of America</option>
   <option value="Uruguay">Uruguay</option>
   <option value="Uzbekistan">Uzbekistan</option>
   <option value="Vanuatu">Vanuatu</option>
