--- a/Auto Owners/AutoOwnersRemoveDriver.html
+++ b/Auto Owners/AutoOwnersRemoveDriver.html
@@ -15,7 +15,7 @@
   <body class="bg-gray-100 flex items-center justify-center min-h-screen p-6">
     <form
       id="mainForm"
-      action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00Dcb000009T0mR"
+      action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DVD000007JpKX"
       method="POST"
       class="bg-white p-8 rounded-2xl shadow-md w-full max-w-xl space-y-8 relative"
       autocomplete="off"
@@ -119,7 +119,7 @@
         </div>
       </div>
 
-      <input type="hidden" name="oid" value="00Dcb000009T0mR" />
+      <input type="hidden" name="oid" value="00DVD000007JpKX" />
       <input type="hidden" name="retURL" value="https://bennettandporter.com/" />
       <input type="hidden" id="formDataJson" name="Form_Captured_Data__c" value="" />
       <input type="hidden" id="formMissingData" name="Form_Missing_Data__c" value="" />
@@ -181,12 +181,22 @@
             }
         });
 
-        // 4. Datepicker
-        new Pikaday({
-          field: document.getElementById("00NU7000005zuLl"),
-          format: "MM/DD/YYYY"
-        });
-
+        
+       // 4. Datepicker
+new Pikaday({
+    field: document.getElementById("00NU7000005zuLl"),
+    format: "MM/DD/YYYY",
+    toString(date) {
+      const day = String(date.getDate()).padStart(2, "0");
+      const month = String(date.getMonth() + 1).padStart(2, "0");
+      const year = date.getFullYear();
+      return `${month}/${day}/${year}`;
+    },
+    parse(dateString) {
+      const [month, day, year] = dateString.split("/");
+      return new Date(year, month - 1, day);
+    },
+  });
         // 5. Validation & Review
         const fieldData = [
           { id: "email", label: "Email", type: "email" },
