Updated SafecoAddVehicle.html with error handling.

--- a/Safeco/SafecoAddVehicle.html
+++ b/Safeco/SafecoAddVehicle.html
@@ -228,7 +228,7 @@
           </label>
           <select
             id="00NU7000006N0iD"
-            name="Vehicle_Use12__c"
+            name="Vehicle_Use__c"
             class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm"
             required
           >
